# ndm

./: nft_marketplace.ipynb  readme.md
demo/: README.md  bootstrap.sh  format.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
demo/archived/contracts/: AssetAgreementERC1155.sol  IAssetAgreementERC1155.sol
demo/archived/src/: buyer_registration.py  cli.py  cli_utils.py  decrypt.py  obs_file_upload.py  owner_registration.py
demo/contracts/: AssetAgreement.sol  AssetAgreementFactory.sol  AssetMarket.sol  IAssetAgreement.sol
demo/src/: app.py  constants.py  contract.py  dashboard.py  db.py  extract_watermark.py  market.py  provider.py  upload.py  user_registration.py  utils.py
demo/src/db/: schema.sql  seed.sql
demo/src/plots/: batchmint_gas_plot.py  contract_local.py  deploy_gas_plot.py  gas_method.py  registration_trade_plot.py
demo/src/ssl_watermarking/: decode.py  encode.py  evaluate.py  main_multibit.py
eth_codes/: README.md  package-lock.json  package.json
eth_codes/cache/: solidity-files-cache.json
eth_codes/contracts/: AssetAgreement.sol
eth_codes/plots/: batchmint_gas_plot.py  contract_local.py  gas_method.py  registration_trade_plot.py
wm_codes/: README.md  encode.py  evaluate.py  imagnet_class.py  main_multibit.py  move_file.py  nft.yml  plot_acc.py  requirements.txt  run_scripts.txt  user_generation.py  utils.py
wm_codes/carriers/: carrier_12_2048.pth  carrier_20_2048.pth  carrier_30_2048.pth  carrier_40_2048.pth  carrier_42_2048.pth  carrier_50_2048.pth  carrier_60_2048.pth
wm_codes/plots_paper/: Plot_ECC.py
(+15 files in other folders)
